Source/WebCore/dom/DataTransfer.h
@@ -58,12 +58,14 @@ public:
 
     DataTransferItemList& items();
     Vector<String> types() const;
+    Vector<String> typesForItemList() const;
 
     FileList& files() const;
 
     void clearData(const String& type = String());
 
     String getData(const String& type) const;
+    String getDataForItem(const String& type) const;
 
     void setData(const String& type, const String& data);
     void setDataFromItemList(const String& type, const String& data);
@@ -118,6 +120,8 @@ private:
     bool forFileDrag() const { return false; }
 #endif
 
+    enum class AddFilesType { No, Yes };
+    Vector<String> types(AddFilesType) const;
     Vector<Ref<File>> filesFromPasteboardAndItemList() const;
 
     StoreMode m_storeMode;
